# Python-Stock-Trading-Bot

./: .replit  04-08's big moves.csv  04-08's fundamentals.csv  04-08's_quotes.csv  04-08.csv  README.md  api.py  data_miner.py  fetch_biggestDailyMovers.py  fetch_optionsData.py  fetch_stockPriceHistory.py  get_fundamentals.py  get_history.py  get_quotes.py  learner.py  main.py  options_trader.py  pyproject.toml  replit.nix  runner.py  runner_algo.py  stockTradeVisualization.py  stockTradingBot.py  stock_trade_analysis.py  stock_trader.py  z.notes.md
2022-04-09/: 04-09's candle_stick.csv  04-09's fundamentals.csv  04-09's_quotes.csv
2022-04-10/: 04-10's candle_stick.csv  04-10's fundamentals.csv  04-10's_quotes.csv
2022-04-11/: 04-11's big moves.csv  04-11's candle_stick.csv  04-11's fundamentals.csv  04-11's_quotes.csv
2022-04-12/: 04-12's CALL_options.csv  04-12's PUT_options.csv  04-12's big moves.csv  04-12's candle_stick.csv  04-12's fundamentals.csv  04-12's_quotes.csv
2022-04-13/: 04-13's CALL_options.csv  04-13's PUT_options.csv  04-13's big moves.csv  04-13's candle_stick.csv  04-13's fundamentals.csv  04-13's_quotes.csv
2022-04-19/: 04-19's CALL_options.csv  04-19's PUT_options.csv  04-19's big moves.csv  04-19's candle_stick.csv  04-19's fundamentals.csv  04-19's_quotes.csv
2022-04-21/: 04-21's CALL_options.csv  04-21's PUT_options.csv  04-21's big moves.csv  04-21's candle_stick.csv  04-21's fundamentals.csv  04-21's_quotes.csv
2022-05-15/: 05-15's CALL_options.csv  05-15's PUT_options.csv  05-15's big moves.csv  05-15's fundamentals.csv  (+1 more)
(+78 files in other folders)
