[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
Flask = "^2.1.1"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
plotly = "^5.7.0"
sklearn = "^0.0"
ngocbienml = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"